--- a/rentals/templates/rentals/index.html
+++ b/rentals/templates/rentals/index.html
@@ -20,13 +20,13 @@
             <th scope="col">Previous reservation ID</th>
         </tr>
         </thead>
-        {% for res in reservations %}
+        {% for res in previous_reservations %}
             <tr>
-                <td>{{ res.0 }}</td>
-                <td>{{ res.1 }}</td>
-                <td>{{ res.2 }}</td>
-                <td>{{ res.3 }}</td>
-                <td>{{ res.4 }}</td>
+                <td>{{ res.rental_name }}</td>
+                <td>{{ res.reservation_id }}</td>
+                <td>{{ res.reservation_checkin }}</td>
+                <td>{{ res.reservation_checkout }}</td>
+                <td>{{ res.previous_reservation_id }}</td>
             </tr>
         {% endfor %}
     </table>
